Added new endpoints
